--- a/html/PBWFU/PBWFU020000.html
+++ b/html/PBWFU/PBWFU020000.html
@@ -74,7 +74,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>수익률 BEST</h1>
+					<h1>판매 BEST</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="관심 펀드"><i class="i-favorite"></i></button>
