--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -111,6 +111,11 @@
 					</div>
 					<!-- //tab-content -->
 
+					<!-- snackbar-content -->
+					<div class="snackbar-content is-sticky">
+						<button type="button" class="fab fab-primary fab-square" aria-label="더보기"><i class="ico-reply"></i></button>
+					</div>
+					<!-- //snackbar-content -->
 
 
 					<!-- sort-wrap -->
@@ -369,6 +374,7 @@
 
 	</main>
 	<!-- //main -->
+
 
 	<!-- micromodal -->
 	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-myinfo">
