--- a/html/index.html
+++ b/html/index.html
@@ -706,7 +706,25 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU050000</a></td>
 						<td></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td>펀드 비교</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU060000</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>나의 관심펀드</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU070000</a></td>
+						<td></td>
+					</tr>
+                    
 				</tbody>
 				<tbody data-folder="PBWCL">
 					<tr>
