--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -712,6 +712,7 @@
 		#chart2 .apexcharts-legend.apx-legend-position-bottom.apexcharts-align-center,
 		#chart2 .apexcharts-legend.apx-legend-position-top.apexcharts-align-center {
 			justify-content: flex-start;
+			flex-direction: column;
 		}
 	</style>
 
