--- a/html/index.html
+++ b/html/index.html
@@ -273,6 +273,16 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Table</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_table</a></td>
+						<td></td>
+					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Tag</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_tag</a></td>
 						<td></td>
@@ -631,7 +641,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWLO_alert</a></td>
 						<td></td>
 					</tr>
-                    
+
 				</tbody>
 				<tbody data-folder="PBWFU">
 					<tr>
@@ -724,7 +734,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWFU070000</a></td>
 						<td></td>
 					</tr>
-                    
+
 				</tbody>
 				<tbody data-folder="PBWCL">
 					<tr>
