--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -113,7 +113,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<button type="button" class="fab fab-primary fab-square" aria-label="더보기"><i class="ico-reply"></i></button>
+						<button type="button" class="fab fab-primary fab-square" aria-label="글쓰기"><i class="ico-reply"></i></button>
 					</div>
 					<!-- //snackbar-content -->
 
