--- a/html/index.html
+++ b/html/index.html
@@ -570,6 +570,15 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>전체 메모</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_memo</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td></td>
 						<td>공유명함첩</td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001_share</a></td>
