--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -355,6 +355,22 @@
 								<!-- comment-wrap -->
 
 							</li>
+							<li>
+
+								<!-- comment-wrap -->
+								<div class="comment-wrap">
+									<div class="comment-user-profile">
+										<div class="avartar avartar-nodata "><i class="icon-only icon-24 icon-nodata bg-icon-gray_2"></i></div>
+									</div>
+									<div class="comment-user-info">
+										<p class="body-medium fw-400">원글이 삭제되었습니다.</p>
+									</div>
+								</div>
+								<!-- comment-wrap -->
+
+							</li>
+
+
 						</ul>
 					</div>
 
