--- a/html/index.html
+++ b/html/index.html
@@ -244,8 +244,12 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Select Wheel</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_select_wheel</a></td>
+						<td>Select Wheel2</td>
+						<td class="al article">
+							<a href="" class="link inner-arrow">component_wheel_time</a>
+							<br>
+							<a href="" class="link inner-arrow">component_wheel_weekend</a>
+						</td>
 						<td></td>
 					</tr>
 
