--- a/html/index.html
+++ b/html/index.html
@@ -843,6 +843,30 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWCA000000</a></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>일정등록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA010000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>일정검색</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA040000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색결과 없음</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA040000_noresult</a></td>
+					</tr>
 
 				</tbody>
 
