--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -96,37 +96,51 @@
 				<!-- content -->
 				<div class="content">
 
-					<!-- inp-group -->
-					<div class="inp-group mt16 px0 gap16">
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox" class="type-red" id="chk01" checked>
-								<span class="label-title">개인 일정</span>
-							</label>
-						</div>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox" class="type-purple" id="chk02" checked>
-								<span class="label-title">고객 생일</span>
-							</label>
-						</div>
-						<div class="inp inp-medium">
-							<label>
-								<input type="checkbox" class="type-cyan" id="chk03" checked>
-								<span class="label-title">수신 만기</span>
-							</label>
-						</div>
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
+
+					<!-- snackbar-content -->
+					<div class="snackbar-content is-sticky">
+						<a href="#" class="fab fab-secondary fab-circle" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-primary fab-square" aria-label="일정 추가"><i class="ico-calendar"></i></a>
 					</div>
-					<!-- //inp-group -->
+					<!-- //snackbar-content -->
 
 					<!-- datepicker-wrap -->
-					<div class="datepicker-wrap">
+					<div class="datepicker-wrap content-fluid pt16 pb40 bg-surface-surface">
+
+						<!-- inp-group -->
+						<div class="inp-group gap16 px0">
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" class="type-red" id="chk01" checked>
+									<span class="label-title">개인 일정</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" class="type-purple" id="chk02" checked>
+									<span class="label-title">고객 생일</span>
+								</label>
+							</div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" class="type-cyan" id="chk03" checked>
+									<span class="label-title">수신 만기</span>
+								</label>
+							</div>
+						</div>
+						<!-- //inp-group -->
+
 						<div aria-label="날짜 선택" class="datepicker-trigger" id="datepicker_schedule"></div>
 					</div>
 					<!-- //datepicker-wrap -->
 
 					<!-- schedule-section -->
-					<div class="schedule-section content-fluid pt40 pb24 mb-24">
+					<div class="schedule-section content-fluid pt40">
 						<div class="tags-wrap mb24">
 							<div class="tags tags-medium tags-lightBlue">2024년 11월 17일 목요일</div>
 						</div>
@@ -146,8 +160,6 @@
 							</div>
 						</a>
 
-
-
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-wallet bg-cyan-500" aria-label="수신만기"></i>
@@ -162,7 +174,6 @@
 								</div>
 							</div>
 						</a>
-
 
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
@@ -199,7 +210,6 @@
 							</div>
 						</a>
 
-
 						<a href="#" class="schedule-list">
 							<div class="schedule-title">
 								<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
@@ -219,10 +229,8 @@
 								</div>
 							</div>
 						</a>
-
-
-
 					</div>
+					<!-- //schedule-section -->
 
 				</div>
 				<!-- //content -->
@@ -238,86 +246,6 @@
 
 	</main>
 	<!-- //main -->
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-country">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large">환율정보 조회</strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-
-					<div class="content">
-
-						<div class="flag flag-us px8 py16"><strong>USD</strong><span>미국 달러</span></div>
-						<div class="table-col px8">
-							<table>
-								<caption>환율정보 조회</caption>
-								<tbody>
-									<tr>
-										<th scope="row" class="al">고시기준일</th>
-										<td class="ar">2024-11-18</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">고시시각</th>
-										<td class="ar">17:18:29</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">매매기준율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">전신환매도율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">전신환매입율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">현찰매입율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">대미환산율</th>
-										<td class="ar">1,000배</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">미불당환산율</th>
-										<td class="ar">1,000배</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">본지점매도율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-									<tr>
-										<th scope="row" class="al">본지점매입율</th>
-										<td class="ar">9,999.99원</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-
-					</div>
-
-				</div>
-				<div class="modal__footer">
-					<!-- bottom-btn -->
-					<div class="bottom-btn">
-						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>환율계산하기</button>
-						</div>
-					</div>
-					<!-- //bottom-btn -->
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
 
 
 	<script>
