--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -345,7 +345,7 @@
 								<strong class="title-medium">반복 주기</strong>
 							</div>
 							<div class="group-content">
-								<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>매일</span></button>
+								<button class="select" data-micromodal-trigger="modal-select-list" data-placeholder="선택하세요"><span>매월</span></button>
 							</div>
 
 
@@ -384,6 +384,7 @@
 										</div>
 									</div>
 								</div>
+								<!-- 선택 시 활성화 -->
 								<div class="select-spinner" id="spinner02">
 									<section class="scroll-container">
 										<label class="scroll-items"><input type="radio" name="items3" class="blind"><span>첫째주</span></label>
@@ -402,6 +403,8 @@
 										<label class="scroll-items"><input type="radio" name="items4" class="blind"><span>토요일</span></label>
 									</section>
 								</div>
+								<!-- //선택 시 활성화 -->
+
 							</div>
 							<!-- //매월 반복 -->
 
