--- a/html/index.html
+++ b/html/index.html
@@ -857,7 +857,6 @@
 							<a href="" class="link inner-arrow">PBWCA010000_month</a>
 						</td>
 					</tr>
-
 					<tr>
 						<td></td>
 						<td></td>
@@ -886,6 +885,16 @@
 
 				</tbody>
 
+				<tbody data-folder="PBWAI">
+					<tr>
+						<td>PBWAI</td>
+						<td>AI 지식상담</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWAI000000</a></td>
+					</tr>
+				</tbody>
 			</table>
 		</div>
 
