--- a/html/PBWAI/PBWAI000000_data01.html
+++ b/html/PBWAI/PBWAI000000_data01.html
@@ -206,11 +206,22 @@
 							<!-- 기본 질문과 답변 -->
 							<div class="chatbody">
 								<div class="message-text left">
-									<p class="text">예금관련 문의가 있으신가요? <br> 아래의 예시로 대화를 시작해보세요!</p>
+									<p class="text">원칙적으로 불가합니다. <br> 대리인을 통해 신규한 경우라도 대리인 해지는 원칙적으로 불가합니다.<br> 단, 예금업무메뉴얼 26조에 근거하여 아래의 경우 영업점 판단하에 예금의 해지절차에 준하여 업무처리하되 개인형 IRP는 퇴직금과 퇴직연금으로 해지 가능합니다.</p>
+									<div class="sub-"></div>
 								</div>
+								<div class="message-text left">
+									<p class="text">원칙적으로 불가합니다. <br>
+										대리인을 통해 신규한 경우라도 대리인 해지는 원칙적으로 불가합니다.<br>
+										단, 예금업무메뉴얼 26조에 근거하여 아래의 경우 영업점 판단하에 예금의 해지절차에 준하여 업무처리하되 개인형 IRP는 퇴직금과 퇴직연금으로 해지 가능합니다.</p>
+								</div>
+							</div>
+							<div class="chatbody">
 								<div class="message-text right">
 									<p class="text">안녕하세요.</p>
 								</div>
+							</div>
+							<div class="chatbody">
+
 								<div class="message-text right">
 									<p class="text">우리은행 챗봇 입니다.우리은행 챗봇 입니다.우리은행 챗봇 입니다.우리은행 챗봇 입니다.</p>
 								</div>
@@ -233,7 +244,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<div class="input-wrap"><input type="text" placeholder="궁금하신 사항을 질문하세요."></div>
-				<button type="button" class="btn-large btn-primary" style="flex:0">확인</button>
+				<button type="button" class="btn-large btn-primary" id="btn-send-text" style="flex:0">확인</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -253,6 +264,24 @@
 				prevEl: ".swiper-button-prev",
 			},
 		});
+
+
+		$('#btn-send-text').click(function() {
+			// $('.input-wrap input').focus()
+			var inputText = $('.input-wrap input').val();
+			$('.chatgroup .chatbody:last').after('<div class="chatbody"><div class="message-text right"><p class="text">' + inputText + '</p></div></div>')
+			scrollBottom();
+			$('.input-wrap input').val('')
+		})
+		// scroll page bottom animation 100%
+		var scrollBottom = function() {
+			var $el = $('html, body');
+			var $elDefaultHeight = $(window).height();
+			var scrollTime = 400;
+			$('html,body').stop().animate({
+				scrollTop: $el.prop('scrollHeight')
+			}, scrollTime);
+		}
 	</script>
 
 </body>
