--- a/html/PBWFI/PBWFI050000.html
+++ b/html/PBWFI/PBWFI050000.html
@@ -292,7 +292,9 @@
 				</div>
 				<div class="modal__content">
 					<div class="content">
-						<div class="jquery-datepicker"></div>
+						<div class="datepicker-wrap">
+							<div class="jquery-datepicker"></div>
+						</div>
 					</div>
 				</div>
 			</div>
