--- a/html/index.html
+++ b/html/index.html
@@ -882,12 +882,9 @@
 						<td></td>
 						<td>수신만기</td>
 						<td></td>
-						<td class="al article"><a href="" class="link inner-arrow">PBWCA029902 </a></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWCA029902</a></td>
 					</tr>
-
-
 				</tbody>
-
 				<tbody data-folder="PBWAI">
 					<tr>
 						<td>PBWAI</td>
@@ -896,6 +893,24 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWAI000000</a></td>
+					</tr>
+				</tbody>
+				<tbody data-folder="PBWIV">
+					<tr>
+						<td>PBWIV</td>
+						<td>투자정보</td>
+						<td>주요지수</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV010000</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>지수 상세</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV010001</a></td>
 					</tr>
 				</tbody>
 			</table>
